[package]
name = "msgpack-tracing"
version = "0.1.0"
edition = "2024"

[features]
default = ["env-filter"]
env-filter = ["tracing-subscriber/env-filter"]

[dependencies]
chrono = "0.4.41"
nu-ansi-term = "0.50.1"
rmp = "0.8.14"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [] }

[workspace]
members = [
    "generate-log",
    "msgpack-tracing-printer"
]
