[package]
authors = ["André Puel <andrepuel@gmail.com>"]
description = "Compact storage for tracing using msgpack"
homepage = "https://github.com/Andrepuel/msgpack-tracing"
keywords = ["logging", "metrics", "subscriber", "tracing"]
license = "MIT"
name = "msgpack-tracing"
repository = "https://github.com/Andrepuel/msgpack-tracing.git"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[features]
default = ["env-filter"]
env-filter = ["tracing-subscriber/env-filter"]

[dependencies]
chrono = "0.4.41"
nu-ansi-term = "0.50.1"
rmp = "0.8.14"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [] }

[workspace]
members = [
    "generate-log",
    "msgpack-tracing-printer"
]
