[package]
authors = ["André Puel <andrepuel@gmail.com>"]
description = "Compact storage for tracing using msgpack"
homepage = "https://github.com/Andrepuel/msgpack-tracing"
keywords = ["logging", "metrics", "subscriber", "tracing"]
license = "MIT"
name = "msgpack-tracing-printer"
repository = "https://github.com/Andrepuel/msgpack-tracing.git"
version = "0.1.0"
edition = "2024"
readme = "../README.md"

[dependencies]
atty = "0.2.14"
msgpack-tracing = { path = "../", version = "0.1"}
